Add styling to divs and spans.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>My Resume</h1>
     <p>Bacon ipsum dolor amet tenderloin beef ribs meatball tri-tip chuck frankfurter fatback sausage picanha.</p>
-    <div class="">
+    <div class="skills">
       <h2>Skills</h2>
       <ul>
         <li>juggling</li>
@@ -17,21 +17,21 @@
         <li>excellent source of ballast</li>
       </ul>
     </div>
-    <div class="">
+    <div class="education">
       <h2>Education</h2>
       <ul>
         <li>Clown College of Fresno</li>
-        <li>School of Hard Knocks 1997-Pesent</li>
+        <li>School of Hard Knocks <span class="dates">1997-Pesent</span></li>
         <li>Epicodus</li>
         <li>Vassar</li>
       </ul>
     </div>
-    <div class="">
+    <div class="work">
       <h2>Work Experience</h2>
       <ul>
-        <li>Professional Gambler 2003-2006</li>
-        <li>Wallpaper Hanger 2007</li>
-        <li>Pizza Delivery Guy 2007-2013</li>
+        <li>Professional Gambler <span class="dates">2003-2006</span></li>
+        <li>Wallpaper Hanger <span class="dates">2007</span></li>
+        <li>Pizza Delivery Guy <span class="dates">2007-2013</span></li>
       </ul>
     </div>
   </body>
