Add column class to divs.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>My Resume</h1>
     <p>Bacon ipsum dolor amet tenderloin beef ribs meatball tri-tip chuck frankfurter fatback sausage picanha.</p>
-    <div class="skills">
+    <div class="skills column">
       <h2>Skills</h2>
       <ul>
         <li>juggling</li>
@@ -17,7 +17,7 @@
         <li>excellent source of ballast</li>
       </ul>
     </div>
-    <div class="education">
+    <div class="education column">
       <h2>Education</h2>
       <ul>
         <li>Clown College of Fresno</li>
@@ -26,7 +26,7 @@
         <li>Vassar</li>
       </ul>
     </div>
-    <div class="work">
+    <div class="work column">
       <h2>Work Experience</h2>
       <ul>
         <li>Professional Gambler <span class="dates">2003-2006</span></li>
